<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_store">Enter The Store</string>
    <string name="welcome">Welcome</string>
    <string name="valued_customer">Valued Customer.</string>
    <string name="intructions_one">Add shoes to your store.</string>
    <string name="instructions_two">Customize them however you want.</string>
    <string name="add_shoe_button">details button</string>
    <string name="logout_button">Logout</string>
    <string name="welcome_two">To Shoe Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_details">Details</string>
    <string name="edit_company">Company</string>
    <string name="edit_size">Size</string>
    <string name="edit_name">Name</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="see_instructions">See Instructions</string>
    />
</resources>
